--- a/styles/header.css
+++ b/styles/header.css
@@ -14,11 +14,6 @@
     align-items: center;
     position: relative;
 
-
-}
-
-.logo_costa{
-    width: 44px 
 }
 .container{
     display: flex;
@@ -34,15 +29,29 @@
     top: 100%;
     background-color: var(--branco);
     width: 60vw;
-
 }
 
 .container__botao{
     display: none;
 }
-
 .container__botao:checked~ .lista-menu{
     display: block;
 }
 
+.lista-menu__titulo{
+    color: var(--amarelo);
+}
+
+.lista-menu__item{
+    background: var(--roxo-degrade);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip:text;
+    text-transform:uppercase;
+}
+
+.lista-menu__titulo, .lista-menu__item{
+    padding: 1em;
+    background-color: var(--branco);
+}
 
