--- a/styles/grid.css
+++ b/styles/grid.css
@@ -15,3 +15,14 @@
     margin-bottom: 7px;
     text-align: center;
 }
+ @media screen and (min-width: 1024px) {
+
+ .Imagem{
+    border-top: 10px groove rgb(133, 33, 108);
+    border-left: 10px dotted rgb(231, 217, 12);
+    border-right: 10px solid rgb(223, 5, 5);
+    border-bottom: 10px dashed rgb(9, 48, 177);
+    width: 200px !important;
+    height: 200px !important;
+    }
+}
