--- a/styles/grid.css
+++ b/styles/grid.css
@@ -18,11 +18,21 @@
  @media screen and (min-width: 1024px) {
 
  .Imagem{
-    border-top: 10px groove rgb(133, 33, 108);
-    border-left: 10px dotted rgb(231, 217, 12);
-    border-right: 10px solid rgb(223, 5, 5);
-    border-bottom: 10px dashed rgb(9, 48, 177);
+    border-top: 10px groove rgb(133, 98, 33);
+    border-left: 10px dotted rgb(133, 98, 33);
+    border-right: 10px solid rgb(133, 98, 33);
+    border-bottom: 10px dashed rgb(133, 98, 33);
     width: 200px !important;
     height: 200px !important;
     }
+}
+
+.logo_imagem{
+    width: 200px;
+    height: 100px;
+}
+
+.imagem_class{
+width: 100px;
+height: 90px;
 }
